--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
   color: white;
   
 }
-.layout {
+.my-work {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -93,7 +93,12 @@ article {
   background-color: blue;
 }
 
-.layout section{
+.content {
+  width: 80%;
+  display: inline-block;
+  justify-content: end;
+}
+.my-work section{
   flex: 0 0 500px;
   padding: 5px;
   margin-top: 50px;
@@ -105,17 +110,18 @@ article {
 /* adjust height of box inside checkered line here*/
 }
 
-.layout section header {
+.my-work section header {
   padding: 5px;
   position: relative; 
   margin-top: -30px; 
   justify-content: center;
 }
 
-.layout .card1 {
+.my-work .card1 {
   flex: 1 0 100%;
   }
-  .layout section {
+
+  .my-work section {
     flex: 1 0 auto;
   }
 
@@ -123,13 +129,21 @@ article {
 .sections {
   float: left;
   width: 10%;
-  height: 100%;
+  height: 1200px;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   
 }
 
 .sections h3 {
   margin-bottom: 10px;
   text-align: right;
+}
+.footer {
+  display: block;
+    text-align: center;
 }
 
 
