--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ margin: 10px;
 /* setting uniform look for how images are presented on the page */
 img {
   max-height: 200px;
+  max-width: 250px;
   margin: 5px;
   border: 5px solid black;
   border-radius: 10px;
